--- a/package.json
+++ b/package.json
@@ -1,6 +1,19 @@
 {
   "dependencies": {
+    "ejs": "^3.1.10",
+    "express": "^4.21.2",
+    "mysql2": "^3.12.0",
     "nodemon": "^3.1.9",
     "sequelize": "^6.37.5"
-  }
+  },
+  "scripts": {
+    "start": "nodemon index.js"
+  },
+  "name": "nimap-task",
+  "description": "",
+  "version": "1.0.0",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
